--- a/src/styles.css
+++ b/src/styles.css
@@ -85,6 +85,8 @@ html {
 
 body {
   overflow-x: hidden;
+  margin: 0;
+  padding: 0;
 }
 
 body {
